View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025624 | Open CASCADE | OCCT:Visualization | public | 2014-12-17 12:42 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025624: Visualization - selection is incorrect in perspective mode in a specific case | ||||
Description | In perspective mode the selection chooses incorrect object that located behind a being clicked object, due to the distance of the eye from a camera center if the sizes of being selected objects are mush greater, the problem disappears | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box a 0.0 0.0 0.0 0.1 0.1 0.1 box b 0.0 0.0 0.5 0.1 0.1 0.1 box c 0.0 0.0 1.0 0.1 0.1 0.1 vinit View1 vclear vtop vsetdispmode 0 vcamera -persp vdisplay a b c vfit vselect 210 210 vsetdispmode 1 The problem does not appear when boxes have the following definition: box a 0 0 0 2 2 2 box b 0 0 3 2 2 2 box c 0 0 6 2 2 2 | ||||
Additional information and documentation updates | vcamera information (bad case):ProjType: perspective FOVy: 45 Distance: 1.1945454795168577 IOD: 0.050000000000000003 IODType: relative ZFocus: 1 ZFocusType: relative vcamera information (good case): ProjType: perspective FOVy: 45 Distance: 9.9545454525002341 IOD: 0.050000000000000003 IODType: relative ZFocus: 1 ZFocusType: relative | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug25624 | ||||
|
persp_sel_ko.png (3,464 bytes) |
|
The problem is not reproducable using redesigned selection mechanism (issue 0024623) for both small and large objects. |
|
Branch CR25624 has been created by vpa. SHA-1: b063594c95bea96b65751f45a0c203746caec6b1 Detailed log of new commits: Author: vpa Date: Tue Feb 10 18:19:10 2015 +0300 0025624: Visualization - selection is incorrect in perspective mode in a specific case Scale for perspective projection matrix was moved to Select3D_Projector; Corrected computation of picking line for perspective camera; Test case for issue 25624. |
|
Dear Kirill, the patch in branch CR25624 is ready to be reviewed. |
|
Branch CR25624 has been updated forcibly by vpa. SHA-1: 7cc367712ac8bbee389e82fc4da211d4a1c25e2b |
|
Please test the patch. |
|
Branch CR25624 has been updated forcibly by vpa. SHA-1: 0ec50fa1e66c8964eef94689b670d930d23c2701 |
|
Dear BugMaster, Branch CR25624 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 0ec50fa1e66c8964eef94689b670d930d23c2701 Number of compiler warnings: occt component : Linux: 26 (18 on master) Windows: 0 (0 on master) There are new additional compilation warnings on Linux platform: http://jenkins-test-03.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/mnt-CR25624-master_build_occt_linux/1/warnings17Result/package.-671474530/file.-662617227/ Select3D_Projector.hxx:202, GNU C Compiler 4 (gcc), Priority: Normal ‘Standard_Real Select3D_Projector::myZNear’ Select3D_Projector.hxx:209, GNU C Compiler 4 (gcc), Priority: Normal ‘Select3D_Projector::myType’ will be initialized after http://jenkins-test-03.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/mnt-CR25624-master_build_occt_linux/1/warnings17Result/package.1928144792/ Select3D_Projector.cxx:107, GNU C Compiler 4 (gcc), Priority: Normal when initialized here Select3D_Projector.cxx:121, GNU C Compiler 4 (gcc), Priority: Normal when initialized here Select3D_Projector.cxx:135, GNU C Compiler 4 (gcc), Priority: Normal when initialized here Select3D_Projector.cxx:151, GNU C Compiler 4 (gcc), Priority: Normal when initialized here Select3D_Projector.cxx:167, GNU C Compiler 4 (gcc), Priority: Normal when initialized here Select3D_Projector.cxx:185, GNU C Compiler 4 (gcc), Priority: Normal when initialized here products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25624-master-occt/Debian60-64/bugs/vis/bug25624.html http://occt-tests/CR25624-master-occt/Windows-32-VC10/bugs/vis/bug25624.html bugs vis(004) bug25624: OK Testing on Linux: occt component : Total MEMORY difference: 84560492 / 86186852 Total CPU difference: 51114.13999999995 / 47876.559999999845 products component : Total MEMORY difference: 23336527 / 23394887 Total CPU difference: 15759.029999999982 / 14738.999999999967 Testing on Windows: occt component : Total MEMORY difference: 40649424 / 40658496 Total CPU difference: 31865.828125 / 32754.0 products component : Total MEMORY difference: 11030559 / 11078027 Total CPU difference: 10771.46875 / 10976.0 There are no differences in images found by testdiff. |
|
Branch CR25624 has been updated forcibly by vpa. SHA-1: 50d9c830a967911c8d03e9eea2a7703b182a03b8 |
|
Dear Bugmaster, compilation warnings were fixed. Please, check compilation on Linux. |
|
Please verify only compilation warning - regression testing is not required. |
|
Fix has been recompiled. Warnings are not reproduced |
|
Branch CR25624 has been deleted by inv. SHA-1: 50d9c830a967911c8d03e9eea2a7703b182a03b8 |
occt: master 42b96b07 2015-02-12 08:48:05
Committer: bugmaster Details Diff |
0025624: Visualization - selection is incorrect in perspective mode in a specific case Corrected computation of picking line for perspective camera; Test case for issue 25624. |
Affected Issues 0025624 |
|
mod - src/Select3D/Select3D_Projector.cdl | Diff File | ||
mod - src/Select3D/Select3D_Projector.cxx | Diff File | ||
mod - src/StdSelect/StdSelect_ViewerSelector3d.cxx | Diff File | ||
add - tests/bugs/vis/bug25624 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-17 12:42 |
|
New Issue | |
2014-12-17 12:42 |
|
Assigned To | => kgv |
2014-12-17 13:07 |
|
Product Version | => 6.8.0 |
2014-12-19 07:04 |
|
Assigned To | kgv => dbv |
2014-12-19 07:04 |
|
Status | new => assigned |
2014-12-19 12:04 | kgv | Summary | Selection is incorrect in perspective mode in a specific case => Visualization - selection is incorrect in perspective mode in a specific case |
2014-12-19 12:04 | kgv | Steps to Reproduce Updated | |
2014-12-19 12:04 | kgv | Additional Information Updated | |
2014-12-19 12:12 | kgv | File Added: persp_sel_ko.png | |
2014-12-22 09:19 | kgv | Relationship added | related to 0024623 |
2014-12-23 19:00 |
|
Note Added: 0035622 | |
2015-01-19 17:29 | kgv | Assigned To | dbv => kgv |
2015-01-19 17:29 | kgv | Assigned To | kgv => vpa |
2015-02-10 18:39 | git | Note Added: 0037315 | |
2015-02-10 18:40 |
|
Note Added: 0037317 | |
2015-02-10 18:40 |
|
Assigned To | vpa => kgv |
2015-02-10 18:40 |
|
Status | assigned => resolved |
2015-02-10 19:47 | git | Note Added: 0037328 | |
2015-02-10 20:40 | kgv | Note Added: 0037330 | |
2015-02-10 20:40 | kgv | Assigned To | kgv => bugmaster |
2015-02-10 20:40 | kgv | Status | resolved => reviewed |
2015-02-11 10:58 | git | Note Added: 0037338 | |
2015-02-11 16:55 |
|
Assigned To | bugmaster => mkv |
2015-02-12 11:32 |
|
Note Added: 0037413 | |
2015-02-12 11:32 |
|
Assigned To | mkv => vpa |
2015-02-12 11:32 |
|
Status | reviewed => assigned |
2015-02-12 11:38 |
|
Test case number | => bugs vis(004) bug25624 |
2015-02-12 11:48 | git | Note Added: 0037419 | |
2015-02-12 13:06 |
|
Status | assigned => resolved |
2015-02-12 13:06 |
|
Note Added: 0037428 | |
2015-02-12 13:06 |
|
Assigned To | vpa => bugmaster |
2015-02-12 13:06 |
|
Status | resolved => reviewed |
2015-02-12 13:07 |
|
Note Edited: 0037428 | |
2015-02-12 13:33 |
|
Assigned To | bugmaster => mkv |
2015-02-12 13:38 | kgv | Note Added: 0037431 | |
2015-02-12 15:47 | bugmaster | Note Added: 0037447 | |
2015-02-12 15:47 | bugmaster | Status | reviewed => tested |
2015-02-13 17:35 |
|
Assigned To | mkv => bugmaster |
2015-02-13 17:55 | bugmaster | Changeset attached | => occt master 42b96b07 |
2015-02-13 17:55 | bugmaster | Status | tested => verified |
2015-02-13 17:55 | bugmaster | Resolution | open => fixed |
2015-03-18 13:34 | git | Note Added: 0038533 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |