0025624: Visualization - selection is incorrect in perspective mode in a specific case

Corrected computation of picking line for perspective camera;
Test case for issue 25624.